dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_1462915504.log
== SUBMISSION (2025-08-21 18:47:52)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("Qual o comprimento do lado do pentagono:"))
apotema = lado / (2*tan(pi/5))
area = 5/2*lado*apotema
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentagono:139.35866944770635
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentagono:61.93718642120282
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentagono:208.17776547126502
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentagono:110.1105536376939
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentagono:27.527638409423474
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentagono:172.04774005889672
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:44:16)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("Qual o comprimento do lado do pentagono:"))
apotema = lado // (2tan(pi/5))
area = 5//2*lado*apotema
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi/5))
                       ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:49:35)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("Qual o comprimento do lado do pentagono:"))
apotema = lado / (2*tan(pi/5))
area = 5/2*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Qual o comprimento do lado do pentagono:139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Qual o comprimento do lado do pentagono:61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Qual o comprimento do lado do pentagono:208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Qual o comprimento do lado do pentagono:110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Qual o comprimento do lado do pentagono:27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Qual o comprimento do lado do pentagono:172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:17)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("Qual o comprimento do lado do pentagono:"))
apotema = lado / (2tan(pi/5))
area = 5/2*lado*apotema
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2tan(pi/5))
                      ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:44:53)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("Qual o comprimento do lado do pentagono:"))
apotema = lado // (2tan(pi//5))
area = 5//2*lado*apotema
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado // (2tan(pi//5))
                       ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
